[gd_scene load_steps=20 format=3 uid="uid://b076w8dhkuj4u"]

[ext_resource type="Texture2D" uid="uid://bbywsd1fx2n5f" path="res://Textures/Objects/hourglass/hourglass_glass.png" id="1_erilt"]
[ext_resource type="Script" path="res://Objects/Hourglass/hourglass.gd" id="1_i17mv"]
[ext_resource type="Texture2D" uid="uid://cslm3btdx7lw4" path="res://Textures/Objects/hourglass/hourglass_sand.png" id="1_x8v8c"]
[ext_resource type="Texture2D" uid="uid://0usp0unnueu0" path="res://Textures/Objects/hourglass/hourglass_cracks.png" id="4_y688r"]

[sub_resource type="Curve" id="Curve_gfevy"]
_data = [Vector2(0, 0), 0.0, 0.391726, 0, 0, Vector2(1, 1), 1.38736, 0.0, 0, 0]
point_count = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_scxj0"]
atlas = ExtResource("1_x8v8c")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3s6y"]
atlas = ExtResource("1_x8v8c")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvgdr"]
atlas = ExtResource("1_x8v8c")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_prne3"]
atlas = ExtResource("1_x8v8c")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_suukn"]
atlas = ExtResource("1_x8v8c")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_emlof"]
atlas = ExtResource("1_x8v8c")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_80nfp"]
atlas = ExtResource("1_x8v8c")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8d3cc"]
atlas = ExtResource("1_x8v8c")
region = Rect2(192, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3fntn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_scxj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3s6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvgdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prne3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_suukn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emlof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80nfp")
}],
"loop": true,
"name": &"default",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8d3cc")
}],
"loop": true,
"name": &"stop",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_vrw7l"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Offset/Glass:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Offset/Glass:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_80tlq"]
resource_name = "bump"
length = 0.2
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Offset/Glass:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, 0, 0, 0, 0, -0.5, -0.05, 0, 0.05, 0, 0, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.1, 0.2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Offset/Glass:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-0.1, -0.166667, 0.100005, 0.0999999, 0.100901, 0, -0.0666666, -0.0148706, 0, 0),
"times": PackedFloat32Array(0, 0.2)
}

[sub_resource type="Animation" id="Animation_krryx"]
resource_name = "flip"
length = 1.4
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Offset/Glass:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, 0, 0, 0, 0, -8, -0.3, 0, 0.3, 0, 0, 0, 0, 0, 0, -2, -0.1, 0, 0.1, 0, 0, 0, 0, 0, 0, -0.5, -0.05, 0, 0.05, 0, 0, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.4, 0.8, 1, 1.2, 1.3, 1.4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Offset/Glass:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 3.4, -0.166667, -0.852994, 0.166667, -0.206923, 3, -0.166667, 0.100005, 0.0999999, 0.100901, 3.142, -0.0666666, -0.0148706, 0, 0),
"times": PackedFloat32Array(0, 0.8, 1.2, 1.4)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0kk0o"]
_data = {
"RESET": SubResource("Animation_vrw7l"),
"bump": SubResource("Animation_80tlq"),
"flip": SubResource("Animation_krryx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qob5x"]
size = Vector2(32, 32)

[node name="Hourglass" type="Node2D"]
position = Vector2(245, 166)
script = ExtResource("1_i17mv")
progress_curve = SubResource("Curve_gfevy")

[node name="Offset" type="Node2D" parent="."]

[node name="Glass" type="Sprite2D" parent="Offset"]
texture_filter = 1
texture = ExtResource("1_erilt")

[node name="SandTop" type="Sprite2D" parent="Offset/Glass"]
texture_filter = 1
texture = ExtResource("1_x8v8c")
hframes = 10
vframes = 3

[node name="SandBottom" type="Sprite2D" parent="Offset/Glass"]
texture_filter = 1
texture = ExtResource("1_x8v8c")
hframes = 10
vframes = 3
frame = 10

[node name="SandDrip" type="AnimatedSprite2D" parent="Offset/Glass"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_3fntn")
frame_progress = 0.0673491

[node name="Cracks" type="Sprite2D" parent="Offset/Glass"]
texture = ExtResource("4_y688r")
hframes = 6
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0kk0o")
}
speed_scale = 2.0

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
visible = false
shape = SubResource("RectangleShape2D_qob5x")
